fix: adjust heading todo list on mobile

--- a/src/components/elements/TodosList/TodosList.scss
+++ b/src/components/elements/TodosList/TodosList.scss
@@ -179,6 +179,12 @@
       &:last-child {
         margin-top: 1rem;
       }
+
+      &__heading {
+        &::after {
+          height: 10vh;
+        }
+      }
     }
 
     .spine {
